Fixed overflow-x bug when skills section fades in (#433)
* Fixed overflow issues

* Update Skills.scss

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,8 @@
 
 .App {
   text-align: center;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .App-logo {
